packages/build/tests/error/fixtures/exception_array/plugin.js
export const onPreBuild = function () {
  // eslint-disable-next-line no-throw-literal
  throw [new Error('test'), new Error('testTwo')]
}
